# LLEGO

./: .gitignore  AGENTS.md  EXPERIMENTS.md  README.md  imp_plan.md  install_external.sh  pyproject.toml  submit_job.sh  tasks.md  test_gatree_install.sh
analysis/: read_results.py
configs/: gatree.yaml
configs/endpoint/: default.yaml
experiments/: exp_gatree.py  exp_llego.py  run_gatree.sh  run_llego.sh  submit_gatree.sh  submit_llego.sh
mi_analysis/: .gitignore  HONEST_ANALYSIS.md  PHASE1_ANALYSIS.md  __init__.py  analyze_phase1.py  config.py  debug_tree.py  distillation.py  fitness_attention.py  generate_figures.py  initialization_ablation.py  run_local_test.sh  sae_validation.py  semantic_ablation.py  submit_phase1.sh  submit_rigorous_validation.sh  submit_semantic_ablation.sh  utils.py  validation.py  validation_rigorous.py
mi_analysis/results/: README.md
mi_analysis/results/phase1/: fitness_attention_20260126_204516.json  semantic_ablation_20260126_203745.json  semantic_ablation_20260126_203745_summary.csv
mi_analysis/results/phase2/: phase1_analysis_report.txt  structural_prior.json  structural_prior.pkl
mi_analysis/results/phase3/: rigorous_validation_20260127_155208.csv  rigorous_validation_20260127_155247.csv  rigorous_validation_full_20260127_155208.json  rigorous_validation_full_20260127_155247.json  validation_full_20260127_152149.json  validation_results_20260127_152149.csv
mi_analysis/results/phase4/: ablation_20260127_155619.csv  ablation_20260127_162642.csv  ablation_20260127_165122.csv
mi_analysis/results/sae_validation/: sae_validation_20260130_172106.csv  sae_validation_20260130_172622.csv
mi_analysis/results/test/: fitness_attention_20260126_171619.json  semantic_ablation_20260126_171548.json  semantic_ablation_20260126_171548_summary.csv
paper/: Makefile  main.tex  ref.bib
paper/sections/: abstract.tex  appendix.tex  discussion.tex  introduction.tex  method.tex  related_work.tex  results.tex
results/sae_comparison/3/breast/GATREE/: gatree_config_0.yaml  gatree_config_1.yaml  gatree_config_2.yaml  gatree_config_3.yaml  gatree_config_4.yaml
results/sae_comparison/3/credit-g/GATREE/: gatree_config_0.yaml  gatree_config_1.yaml  gatree_config_2.yaml  gatree_config_3.yaml  gatree_config_4.yaml
results/sae_comparison/3/heart-statlog/GATREE/: gatree_config_0.yaml  gatree_config_1.yaml  gatree_config_2.yaml  gatree_config_3.yaml  gatree_config_4.yaml
results/sae_comparison/3/liver/GATREE/: gatree_config_0.yaml  gatree_config_1.yaml  gatree_config_2.yaml  gatree_config_3.yaml  gatree_config_4.yaml
results/sae_comparison/4/breast/GATREE/: gatree_config_0.yaml  gatree_config_1.yaml  gatree_config_2.yaml  gatree_config_3.yaml  gatree_config_4.yaml
results/sae_comparison/4/credit-g/GATREE/: gatree_config_0.yaml  gatree_config_1.yaml  gatree_config_2.yaml  gatree_config_3.yaml  gatree_config_4.yaml
results/sae_comparison/4/heart-statlog/GATREE/: gatree_config_0.yaml  gatree_config_1.yaml  gatree_config_2.yaml  gatree_config_3.yaml  gatree_config_4.yaml
results/sae_comparison/4/liver/GATREE/: gatree_config_0.yaml  gatree_config_1.yaml  gatree_config_2.yaml  gatree_config_3.yaml  gatree_config_4.yaml
results/test_run/3/breast/GATREE/: gatree_config_0.yaml
sae_project/: TASKS.md  extract_sae_priors.py  nb_main.py  sae_semantic_prior.py
sae_project/priors/breast/: extraction_result.pkl  similarity_matrix.csv
sae_project/priors/credit-g/: extraction_result.pkl  similarity_matrix.csv
sae_project/priors/heart/: config.json  extraction_result.pkl  similarity_matrix.csv
sae_project/priors/liver/: extraction_result.pkl  similarity_matrix.csv
slurm/: slurm_836936.err
src/llego/custom/: fitness_evaluation.py  generic_tree.py  llm_output_parser.py  parsing_to_dict.py  population_initialization.py
src/llego/operators/: crossover_operator.py  mutation_operator.py
src/llego/utils/: llm_api.py
src/utils/: wandb.py
